### Tue Dec 21 19:44:23 CET 2010

  + Convergence testing (serial code only, from command line)


### Sat Oct  9 21:44:10 CEST 2010

  + Win32 DLL support (with MINGW)


### Fri Sep 24 20:23:59 CEST 2010

  - output types fixed in correl.c


### Sun Sep  5 19:00:19 CEST 2010

  + file to write reliability of failure (-fpf FILE)
  + more descriptive I/O error informations


### Sat Aug 28 14:41:27 CEST 2010

  + simpler prefix structure for directories (monte.tcl)
  + command line can be shown (monte.tcl)
  + no executable script "runmonte" is needed (monte.tcl)
  - non-working scrollbars fixed (monte.tcl)


### Fri Aug 13 18:22:59 CEST 2010

  - MPI compilation bugs (once more)


### Sat Nov 17 14:56:30 CET 2007

  + "copy" random variable added (because of uFEM)


### Tue Oct 24 22:27:57 CEST 2006

  + "verbose mode" command line switch added to molitest (-v)


### Tue Sep 26 23:51:34 CEST 2006

  + uFEM can be used as a library solver (hard to use)

  - field lenghts fixed in simul.c and molitest.c
  - combined output of input and input variables fixed

  
### Wed Aug 23 23:07:37 CEST 2006

  - new order of calling of library functions (type 2): init first 


### Mon Aug 14 18:14:22 CEST 2006

  + realizations of input variables can also be saved (if applicable)
  + 8991 lines of C code (including 2543 lines of uFEM stuff)


### Sun Aug  6 18:59:48 CEST 2006

  + Tcl: keyboard accelerators for menu
  + 1853 lines of code of Tcl code


### Sat Aug  5 20:54:40 CEST 2006

  + computation results can be obtained from stdin of file 
    (allows full pipe operations)
  + initializacion for Knuth random generator added
  + initialization of randomizer can be turned off (for testing)
  + 8966 lines of C code (including 2543 lines of uFEM stuff)

  - invalid parameter in corr_unpack fixed (out of field bug)
  - invalid Macintosh file type fixed (again)


### Sun Jul 30 14:46:22 CEST 2006

  + inialization with random seed for non-SPRNG generators

